style.css
.container{
    display: flex;
    flex-direction: column;
    flex: 0;
    height: 600px;
    width: 450px;
    justify-self: center;
    justify-content: space-evenly;
    margin-top: 50px;
    background-color: #808080;
    border-radius: 10px;
}

.screen{
    display: flex;
    flex-direction: column;
    align-items: end;
    justify-content: space-around;
    height: 100px;
    width: 400px;
    background-color: #D3D3D3;
    align-self: center;
    border-radius: 5px;
}

.buttons{
    display: flex;
    height: 450px;
    width: 400px;
    align-self: center;
    flex-wrap: wrap;
    gap: 13.333px;
}

.buttons * {
    height: 80px;
    width: 90px;
    border-radius: 5px;
}

.clear,
.delete{
    width: 193.334px;
}

.total,
.currentInput{
    margin: 0px;
    margin-right: 20px;
}

.total{
    font-size: 40px;
}

.currentInput{
    margin-top: 10px;
    font-size: 20px;
}

